更新es版本，优化前端界面，修复bug